--- a/www/taobao/static/admin/css/mymain.css
+++ b/www/taobao/static/admin/css/mymain.css
@@ -12,6 +12,8 @@
 }
 .product_name {
     font-size: medium;
+    font-weight: bold;
+    
 }
 .card:hover .product_name{
     text-decoration: underline;
@@ -26,7 +28,7 @@
 }
 
 .card:hover {
-  box-shadow: 0px 0px 10px 4px rgba(129, 129, 123, 0.61);
+  box-shadow: 0px 0px 8px 2px rgba(4, 87, 182, 0.26);
 }
 @media screen and (max-width:380px) {
     .product-list .card {
